--- a/Proyecto/sass/dieta/dieta.scss
+++ b/Proyecto/sass/dieta/dieta.scss
@@ -5,25 +5,10 @@ header{
 body{
     background-color: gray;
 }
-
-
-section{
-
-    text-align: left;
-}
 .container{
     display: flex;
     text-align: center;
-}
-.entrenamiento{
-    width: auto;
-    height: auto;
-    border: 5px solid gray;
-    font-family: 'Amatic SC', cursive;
-    background-color: lightgoldenrodyellow;
-}
-.entrenamientoH{
-    text-align: center;
+    padding: 10px;
     width: auto;
     height: auto;
     border: 5px solid gray;
